--- a/ExampleMongoDB/Src/Brspontes.Infra.IoC.Mongo/Brspontes.Infra.IoC.Mongo.csproj
+++ b/ExampleMongoDB/Src/Brspontes.Infra.IoC.Mongo/Brspontes.Infra.IoC.Mongo.csproj
@@ -4,4 +4,19 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Brspontes.Domain.Service\Brspontes.Domain.Service.Mongo.csproj" />
+    <ProjectReference Include="..\Brspontes.Infra.Mongo\Brspontes.Infra.Mongo.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
+      <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.dependencyinjection.abstractions\2.2.0\lib\netstandard2.0\Microsoft.Extensions.DependencyInjection.Abstractions.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
